# FuturesCloudSentinel

./: .gitignore  ContractCode.CSV  README.md  protocol.html  protocol.md
.github/workflows/: windows_build.yml
AlarmingClient/: AlarmingClient.slnx  CMakeLists.txt  vcpkg.json
AlarmingClient/ClientUI/: AuthManager.cpp  AuthManager.h  Backend.cpp  Backend.h  ClientUI.vcxproj  ClientUI.vcxproj.filters  ContractData.h  Main.qml  QuoteClient.cpp  QuoteClient.h  WarningManager.cpp  WarningManager.h
AlarmingClient/ClientUI/Components/: ThemeManager.qml  TipsPopup.qml
AlarmingClient/ClientUI/Views/: AlarmPage.qml  LogPage.qml  LoginPage.qml  SettingsPage.qml  ShellPage.qml
AlarmingClient/ClientUI/flow/: TradingDay.con
AlarmingClient/base/: FuturesClient.cpp  FuturesClient.h  main.cpp
Project2/: Project2.slnx
Project2/Project2/: EmailNotifier.cpp  MduserHandler.h  Project2.vcxproj  Project2.vcxproj.filters  base.cpp  base.h  clientMessage.h  db_manager.cpp  db_manager.h  handler.cpp  handler.h  main.cpp  router.h  thread_local.cpp  thread_local.h  thread_local_user_id.cpp  thread_local_user_id.h  threadpool.cpp  threadpool.h  userMapper.cpp
base/: CMakeLists.txt  FuturesClient.cpp  FuturesClient.h  base.cpp  main.cpp
